--- a/views/ng-templates/Component.ejs
+++ b/views/ng-templates/Component.ejs
@@ -11,35 +11,11 @@
     <div class="ports">
       <div class="input">
         <div>
-          <div class="tip" data-port="{{port.name}}" ng-repeat="port in inputPorts">        
-            <span class="box"></span>
-            <span class="relative">
-              <div class="tooltip" ng-if="showTooltip" ng-style="{transform:'translate(-50%) scale('+(1/transformScale())+')'}"> 
-
-            Drag me to create a pipe.
-            <br>Drop it on an empty space to
-           create and connect to a new component.
-            <br>Drop me above above one of us
-            to connect to another component! </div>
-          </span>
-            <span class="text" ng-bind="port.text"></span>
-          </div>
+          <div class="tip" data-input-port data-port="{{port.name}}" ng-repeat="port in inputPorts"></div>
         </div>
       </div>
       <div class="output">
-        <div class="tip" data-port="{{port.name}}" ng-repeat="port in outputPorts"> 
-          <span class="text" ng-bind="port.text"></span>
-          <span class="relative">
-              <div class="tooltip" ng-if="showTooltip" ng-style="{transform:'translate(-50%) scale('+(1/transformScale())+')'}"> 
-
-            Drag me to create a pipe.
-            <br>Drop it on an empty space to
-           create and connect to a new component.
-            <br>Drop me above above one of us
-            to connect to another component! </div>
-          </span>
-          <span class="box"></span>
-        </div>
+        <div class="tip" data-output-port data-port="{{port.name}}" ng-repeat="port in outputPorts"></div>
       </div>
       <div style="clear: both;"></div>
     </div>
