refactor  minimap to typescript

--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -12,7 +12,7 @@
 </div>
 <% include popupArea   %>
 <% include graphNavbar %>
-<% include directory   %>
+<div class="directory directory-manager" filesystem ng-if="status.filesystem"></div>
 <% include tutorial    %>
 <div ui-layout class="layout">
   <div class="toplayout">
