--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -29,9 +29,7 @@
   </div>
   <div data-terminal ng-show="$root.shell" touch-action="all" class="shell"></div>
 </div>
-<% include minimap %>
-
-
+<div minimap ng-style="{width: mapSize, height: mapSize}"></div>
 <div style="z-index:9" class="chat" ng-if="chat.open">
   <button type="button" class="close" ng-click="chat.open = false; graph.updateLater()" aria-hidden="true">&times;</button>
   <div style="overflow:auto; padding-top: 1em; height:30%">
