playing around with declarations Add path painter

--- a/assets/styles/component.less
+++ b/assets/styles/component.less
@@ -1,9 +1,9 @@
 .component,.inline-component {
     font-size:12px;
     position:absolute;
-    background-color:#fff;
+    background-color:#ddd;
     border-radius:4px;
-    border:2px solid #aaa;
+    border:2px solid #999;
     z-index:auto;
     &:hover{
         z-index: 1;
@@ -25,6 +25,7 @@
     .form-control {
         float:initial;
         width:initial;
+        background-color: #ddd
     }
     .title {
         -webkit-user-select: none; /* Chrome/Safari */        
@@ -36,7 +37,7 @@
         -o-user-select: none;
         user-select: none;
         text-align:center;
-        background-color:#ddd;
+        background-color:#ccc;
         position: relative;
         height:1.5em;
         font-family: monospace;
@@ -114,7 +115,7 @@
         background-color:#77a;
     }
     .title{
-        background-color:#ddf;
+        background-color:#ccf;
     }
 }
 
@@ -133,7 +134,7 @@
         background-color:#777;
     }
     .title{
-        background-color:#dde3dd;
+        background-color:#cdc;
     }
 }
 
