--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -30,13 +30,9 @@
     <script src="/bower_components/lazy.js/lazy.js"></script>
     <!--SCRIPTS END-->
     <script src="/bower_components/dropzone/downloads/dropzone.min.js"></script>
-    <script src="/bower_components/mousetrap/mousetrap.min.js"></script>
 
     <!--ANGULAR SCRIPTS-->
-    <script src="/dist/js/app.js"></script>
-    <script src="/js/directives/component.js"></script>
-    <script src="/js/directives/graph.js"></script>
-    <script src="/js/directives/minimap.js"></script>
+    <script src="/js/app.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--ANGULAR SCRIPTS END-->
 
