--- a/assets/styles/graph.css
+++ b/assets/styles/graph.css
@@ -198,7 +198,7 @@ div[graph] .user-icon {
   z-index: 8;
 }
 .background {
-  background-color: #ccc;
+  background-color: #444;
   position: relative;
   width: 100%;
   height: 100%;
