--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -225,7 +225,7 @@ div[graph]{
     z-index:8;
 }
 .background {
-    background-color:#ccc;
+    background-color:#444;
     position:relative;
     width:100%;
     height:100%;
