--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/component.css">
     <link rel="stylesheet" href="/styles/graph.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
