improve type safety

--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -10,7 +10,7 @@
   </alert>
   </div>
 </div>
-<% include popupArea   %>
+<div class="popupArea" data-popup-area></div>
 <% include graphNavbar %>
 <div class="directory directory-manager" filesystem ng-if="status.filesystem"></div>
 <% include tutorial    %>
