--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -20,16 +20,14 @@
       <div data-connectors-layer></div>
       <div touch-action="none" class="workspace" workspace>
         <div class="nodes">
-        <div component ng-repeat="data in visualData.components track by data.id" ng-switch on='data.type' data-node-id="{{data.id}}" ng-style="{transform:transform}" class="{{data.type}}-component component">
-          <% include Component.ejs %>
-          </div>
+          <div component ng-repeat="data in visualData.components track by data.id" data-node-id="{{::data.id}}" class="{{::data.type}}-component component"></div>
         </div>
       </div>
     </div>
   </div>
   <div data-terminal ng-show="$root.shell" touch-action="all" class="shell"></div>
 </div>
-<div minimap ng-style="{width: mapSize, height: mapSize}"></div>
+<div minimap></div>
 <div style="z-index:9" class="chat" ng-if="chat.open">
   <button type="button" class="close" ng-click="chat.open = false; graph.updateLater()" aria-hidden="true">&times;</button>
   <div style="overflow:auto; padding-top: 1em; height:30%">
