refactor chat to a separate component

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -153,7 +153,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/bower_components/lazy.js/lazy.js"></script>
+    <script type="text/javascript" src="/bower_components/lazy.js/lazy.js"></script>
     <!--SCRIPTS END-->
     <script src="/linker/js/custom.js"></script>
 
