--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -27,13 +27,13 @@
     <script src="/js/sails.io.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <!--SCRIPTS-->
-    <script src="/bower_components/lazy.js/lazy.js"></script>
+    <script type="text/javascript" src="/bower_components/lazy.js/lazy.js"></script>
     <!--SCRIPTS END-->
     <script src="/bower_components/dropzone/downloads/dropzone.min.js"></script>
 
     <!--ANGULAR SCRIPTS-->
-    <script src="/js/app.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--ANGULAR SCRIPTS END-->
 
     <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
