--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -1,7 +1,6 @@
 <div class="alerts">
   <div>
   <alert ng-repeat="alert in alerts.alerts" type="{{alert.type}}" class="repeated-item" close="alerts.closeAlert($index)">{{alert.msg}}
-
     <div class="progress progress-striped active" ng-if="alert.progress">
       <div class="progress-bar"  role="progressbar" aria-valuenow="{{alert.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{alert.progress}}%">
         <span>{{alert.progress}}%</span>
@@ -28,21 +27,4 @@
   <div data-terminal ng-show="$root.shell" touch-action="all" class="shell"></div>
 </div>
 <div minimap></div>
-<div style="z-index:9" class="chat" ng-if="chat.open">
-  <button type="button" class="close" ng-click="chat.open = false; graph.updateLater()" aria-hidden="true">&times;</button>
-  <div style="overflow:auto; padding-top: 1em; height:30%">
-  <div ng-repeat="c in clients track by c.id">
-    <b ng-style="{color:c.color}" ng-bind="c.name"></b>
-  </div>
-  </div>
-  <hr style="margin:0">
-  <div style="overflow:auto;height:calc(70% - 34px)">
-  <div ng-repeat="c in chatMessages">
-    <b ng-style="{color:c.color}" ng-bind="c.sender"></b>
-    <span ng-bind="c.text"></span>
-  </div>
-  </div>
-  <form role="form" class="form" ng-init="chatMsg = ''" ng-submit='$emit("chat",{text: chatMsg}); chatMsg = ""'>
-    <input type="text" id="name" ng-model="chatMsg" placeholder="send chat message" class="form-control">
-  </form>
-</div>
+<chat style="z-index:9" clients="clients" class="chat" ng-if="chat.open"></chat>
