--- a/src/angularjs/components/chat-area/chat-area.html
+++ b/src/angularjs/components/chat-area/chat-area.html
@@ -1,4 +1,4 @@
-<button type="button" class="close" ng-click="chat.open = false; graph.updateLater()" aria-hidden="true">&times;</button>
+<button type="button" class="close" ng-click="chat.open = false; graphCtrl.updateLater()" aria-hidden="true">&times;</button>
 <div style="overflow:auto; padding-top: 1em; height:30%">
 <div ng-repeat="c in ctrl.clients track by c.id">
     <b ng-style="{color:c.color}" ng-bind="c.name"></b>
