--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -36,7 +36,7 @@
         </a>
         <ul class="dropdown-menu">
           <li ng-repeat="command in implementedCommands">
-          <a ng-click="newCommandAtTopLeft(command); status.isopen=false;" ng-bind="command"></a>
+          <a ng-click="graphCtrl.newCommandAtTopLeft(command); status.isopen=false;" ng-bind="command"></a>
           </li>
         </ul>
       </li>
