fix realtime messages

--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -17,4 +17,4 @@
   <div data-terminal ng-show="$root.shell" touch-action="all" class="shell"></div>
 </div>
 <div minimap></div>
-<chat style="z-index:9" clients="clients" class="chat" ng-if="chat.open"></chat>
+<chat style="z-index:9" clients="clients" chat-messages="chatMessages" class="chat" ng-if="chat.open"></chat>
